Removed unused variables